--- a/app/components/Menu/styles.module.scss
+++ b/app/components/Menu/styles.module.scss
@@ -1,39 +1,38 @@
 @import "../../styles/index.scss";
 
-.backdrop {
-  left: 0;
-  top: 48px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  overflow: auto;
-  position: fixed;
-  cursor: pointer;
-  backdrop-filter: blur(2px);
-  background-color: $transparent-black;
-}
-
 .menu {
-  width: 100%;
+  top: 0;
+  left: 101px;
+  width: 250px;
   height: 100vh;
-  padding: 10px;
-  max-width: 300px;
-  background-color: $white;
-  box-shadow: 1px 3px 8px $transparent-black;
+  padding: 25px 5px;
+  position: absolute;
 
-  gap: 40px;
-  display: flex;
+  @include flex-column;
   align-items: center;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: end;
+  box-shadow: 10px 0px 10px -10px rgba(0, 0, 0, 0.15);
 }
 
-.menuItem {
-  font-weight: 500;
-  color: $dark-brown;
-  transition: all 0.3s ease;
+.nav {
+  gap: 30px;
+  font-size: 20px;
+  padding-top: 300px;
+  @include flex-column;
+  align-items: center;
+}
+
+.navItem {
+  font-weight: bold;
   text-transform: uppercase;
-  &:hover {
-    color: $primary;
-  }
+}
+
+.author {
+  margin-top: auto;
+}
+
+.authorItem {
+  font-size: 14px;
+  color: $dark-grey;
+  font-weight: lighter;
 }
