--- a/app/components/Menu/styles.module.scss
+++ b/app/components/Menu/styles.module.scss
@@ -7,7 +7,7 @@
   height: 100vh;
   padding: 25px 5px;
   position: absolute;
-
+  background-color: $white;
   @include flex-column;
   align-items: center;
   justify-content: end;
