--- a/app/global.css
+++ b/app/global.css
@@ -1,5 +1,3 @@
-@import "../styles/index.scss";
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,7 +12,7 @@ body {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  background-color: $off-white;
+  background-color: $white;
 }
 
 a {
