--- a/app/index.module.css
+++ b/app/index.module.css
@@ -1,14 +1,13 @@
 .container {
-  gap: 30px;
   display: grid;
-  padding-left: 60px;
+  position: relative;
   padding-bottom: 200px;
   grid-template-columns: repeat(1, minmax(20rem, 1fr));
 
   @media screen and (min-width: 700px) {
     grid-template-columns: repeat(2, minmax(20rem, 1fr));
   }
-  @media screen and (min-width: 1050xpx) {
+  @media screen and (min-width: 1050px) {
     grid-template-columns: repeat(3, minmax(20rem, 1fr));
   }
 }
